# cpp-eks-kubectl

./: .gitignore  Dockerfile  README.md  deploy.sh  refreshCmake.sh
.github/workflows/: ci-cd.yaml
CppKubernetesApp/: CMakeLists.txt  CppKubernetesApp.cpp  CppKubernetesApp.sln  CppKubernetesApp.vcxproj  CppKubernetesApp.vcxproj.filters
CppKubernetesApp/x64/Debug/: CppKubernetesApp.vcxproj.FileListAbsolute.txt  Dockerfile
CppKubernetesApp/x64/Debug/CppKubernetesApp.tlog/: CL.command.1.tlog  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
k8s/: ci-cd.yaml  cpp-kubernetes-app-deployment.yaml  cpp-kubernetes-app-service.yaml  eks-cluster-config.yaml
src/: CMakeLists.txt  CppKubernetesApp.cpp  CppKubernetesApp.vcxproj.filters
x64/Debug/CppKubernetesApp.tlog/: CppKubernetesApp.lastbuildstate
x64/Debug/CppKubernetesApp/x64/Debug/: CppKubernetesApp.exe.recipe
x64/Debug/CppKubernetesApp/x64/Debug/CppKubernetesApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog
